--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <script>
     // הקישור שקיבלת מגוגל שיטס (קובץ -> פרסום באינטרנט -> CSV)
-    const SHEET_URL = 'כאן_מדביקים_את_הקישור_שהעתקת';
+    const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vT_3Yju4wccOqBM5OohlEbiY5XA2Vz_3uHGfz_Qn54fbyTkYTkgX95Fy7BFuP7cZFc_vgmzOEHBwCbs/pub?output=csv';
 
     let rubricData = [];
 
