--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
         }
     }
 
-    function parseCSV(csv) {
+function parseCSV(csv) {
         const lines = csv.split('\n');
         return lines.slice(1).map(line => {
-            // טיפול בפסיקים בתוך מרכאות
             const cols = line.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/);
             return {
                 remedy: (cols[0] || "").replace(/"/g, '').trim(),
                 eng: (cols[1] || "").replace(/"/g, '').trim(),
-                heb: (cols[2] || "").replace(/"/g, '').trim()
+                heb: (cols[2] || "").replace(/"/g, '').trim(),
+                notes: (cols[3] || "").replace(/"/g, '').trim() // עמודת הערות
             };
         }).filter(item => item.remedy || item.eng);
     }
