--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RUBRIC - מאגר רובריקות עטרה</title>
+    <title>RUBRIC - מאגר הרובריקות של עטרה</title>
     <style>
         :root {
             --primary-color: #2c3e50;
@@ -97,8 +97,8 @@
 
 <div class="container">
     <header>
-        <h1>RUBRIC - מאגר רובריקות עטרה</h1>
-        <p>עדכון אוטומטי מגיליון Google Sheets</p>
+        <h1>RUBRIC_HE - מאגר רובריקות לחיפוש בעברית</h1>
+        <p>עדכון אוטומטי ממסד נתונים אישי של עטרה זיידמן</p>
     </header>
 
     <div class="search-box">
@@ -110,7 +110,7 @@
     <table id="rubricTable">
         <thead>
             <tr>
-                <th style="width: 12%;">תרופה</th>
+                <th style="width: 12%;">רמדי</th>
                 <th style="width: 30%;">רובריקה (ENG)</th>
                 <th style="width: 30%;">תרגום (HEB)</th>
                 <th style="width: 28%;">הערות (Notes)</th>
