--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <script>
     // הדביקי כאן את הקישור שקיבלת מגוגל שיטס (חייב להסתיים ב-output=csv)
-    const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vT_3Yju4wccOqBM5OohlEbiY5XA2Vz_3uHGfz_Qn54fbyTkYTkgX95Fy7BFuP7cZFc_vgmzOEHBwCbs/pubhtml';
+    const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vT_3Yju4wccOqBM5OohlEbiY5XA2Vz_3uHGfz_Qn54fbyTkYTkgX95Fy7BFuP7cZFc_vgmzOEHBwCbs/pub?output=csv';
 
     let rubricData = [];
 
