--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 💊 חיפוש רובריקות בעברית - בדאטה של עטרה</title>
+    <title>💊חיפוש רובריקות בעברית/title>
     <style>
         :root {
             --primary: #2c3e50;
@@ -127,11 +127,12 @@
 
 <div class="container">
     <header>
-        <h1>RUBRIC 💊 ZOMEO-READY</h1>
+        <h1>חיפוש רובריקות בעברית 💊</h1>
+        <h4>כלי חיפוש בעברית לאיתור רובריקות הומאופתיות (מבוסס על מסד נתונים מתעדכן של עטרה זיידמן)</h4>
     </header>
 
     <div class="search-area">
-        <input type="text" id="searchInput" placeholder="חיפוש חופשי..." onkeyup="filterTable()">
+        <input type="text" id="searchInput" placeholder="הקלד סימפטום לחיפוש..." onkeyup="filterTable()">
     </div>
 
     <div id="status" class="status">טוען נתונים...</div>
@@ -140,10 +141,10 @@
         <thead>
             <tr>
                 <th>סוג</th>
-                <th>Remedy</th>
+                <th>Remedies</th>
                 <th>Rubric (ENG)</th>
-                <th>תרגום</th>
-                <th>דגשים</th>
+                <th>תרגום לעברית</th>
+                <th>דגשים והערות</th>
             </tr>
         </thead>
         <tbody id="tableBody"></tbody>
