--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💊 חיפוש רובריקות בעברית</title>
+    <title>💊 איתור רובריקות מתקדם</title>
     <style>
         :root {
             --primary: #2c3e50;
@@ -102,10 +102,14 @@
 <body>
 
 <div class="container">
-    <header>
-        <h1>איתור רובריקות בעברית 💊</h1>
+   <header>
+        <h1>איתור רובריקות מתקדם 💊</h1>
+        <p style="margin-top: 10px; color: #555; font-size: 1.1rem; line-height: 1.5;">
+            כלי חיפוש בעברית לאיתור רובריקות הומאופתיות 
+            <br>
+            <span style="font-size: 0.95rem; color: #777;">(מבוסס על מסד נתונים מתעדכן של עטרה זיידמן)</span>
+        </p>
     </header>
-
     <div class="filter-area">
         <select id="typeFilter" onchange="filterTable()">
             <option value="">כל הסוגים 🔍</option>
